feat: config module 代码结构调整
